--- a/index.html
+++ b/index.html
@@ -1,47 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charity Water Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Charity Water</title>
+  <!-- Link to external CSS file -->
+  <link rel="stylesheet" href="style.css">
+  <!-- The style tag below can be removed if all styles are moved to style.css -->
+  <style>/* styles remain same as before */</style>
 </head>
 <body>
-    <!-- Hero Section: This is the main banner at the top of the page -->
-    <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
-    </section>
-
-    <!-- Story Section: This tells the story of the nonprofit -->
-    <section class="story">
-        <h2>Our Story</h2>
-        <p>
-         
-    </section>
-
-    <!-- Real-World Impact Story Section -->
-    <section class="impact-story">
-        <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
-        <!-- Container for image and text -->
-        <div class="impact-content">
-            <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
-            <!-- Impact story text -->
-            <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
-            </p>
-        </div>
-    </section>
-
-    <!-- Call-to-Action Section: This encourages visitors to take action -->
-    <section class="call-to-action">
-        <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-        <a href="#" class="donate-button">Donate Now</a>
-    </section>
+  <header>
+    <!-- Added a class to the logo image for easier styling -->
+    <img class="logo-img" src="charitywater_logo_horizontal_WhiteText (1).png" alt="Charity Water Logo">
+    <a href="#">contact us</a>
+  </header>
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Water You Can Track, Impact You Can Prove</h1>
+      <p>Open data. Honest reporting. Global change you can trust.</p>
+    </div>
+    <div class="hero-image">
+      <img src="https://via.placeholder.com/400x300" alt="Child drinking clean water">
+    </div>
+  </section>
+  <section class="actions">
+    <div>
+      <img src="/path/to/Screenshot_2025-07-03_at_9.13.10_PM.png" alt="donate, project funded, transparent reports graphic">
+    </div>
+  </section>
+  <a class="donate-button" href="#">Donate & See Your Impact</a>
+  <footer>
+    &copy; 2025 Charity Water. All rights reserved.
+  </footer>
 </body>
 </html>
