--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <p>Open data. Honest reporting. Global change you can trust.</p>
     </div>
     <div class="hero-image">
-      <img src="https://via.placeholder.com/400x300" alt="Child drinking clean water">
+      <img src="4996_Ethiopia_2019_CG-.jpg" alt="Child drinking clean water">
     </div>
   </section>
   <section class="actions">
     <div>
-      <img src="/path/to/Screenshot_2025-07-03_at_9.13.10_PM.png" alt="donate, project funded, transparent reports graphic">
+      <img src="landing page graphic .png" alt="donate, project funded, transparent reports graphic">
     </div>
   </section>
   <a class="donate-button" href="#">Donate & See Your Impact</a>
